<?xml version="1.0"?>
<package format="3">
  <name>open3d_slam_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the open3d_slam package</description>

  <author email="ej@ethz.ch">ej</author>
  <maintainer email="ej@ethz.ch">ej</maintainer>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
